--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@
   --color-bg-title:#F9ACBB;
 
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width:960px){
   .intro{
     .text-header p{
       font-size: 40px !important;
@@ -24,6 +24,24 @@
   }
   .job{
     text-align: initial;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .intro{
+    .text-header p{
+      font-size: 40px !important;
+    }
+  }
+  .job{
+    text-align: initial;
+  }
+  .content-cv{
+    .avata-user{
+      .name-user{
+        font-size: 24px !important;
+      }
+    }
+    
   }
 }
 .color-primary{
@@ -60,9 +78,10 @@ background-attachment: fixed;
   position: relative;
   border-right: 10px solid var(--color-bg-title);
   p{
-    font-size: 100px;
+    font-size: 60px;
     padding-right: 20px;
     text-transform: uppercase;
+    font-weight: 600;
   }
   .sub{
     font-size: 36px !important;
